--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Lao:wght@100..900&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "Noto Sans Lao", sans-serif;
   font-weight: 400;
   box-sizing: border-box;
 }
